--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width = device-width", initial-scale="1">
+    <meta name="description" content="">
+    <meta name="author" content="Ivan Martinez">
+    <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">-->
+    <!--Archivo de bootstrap 5 -->
+    <link href="css/bootstrap.min.css" rel="stylesheets">    
+    <title> Nuevo Proyecto </title>
 
 </head>
 
 <body>
-
     
+    <main>
 
+
+    </main>
+    
 </body>
 
 </html>
