--- a/index.html
+++ b/index.html
@@ -1,24 +1,118 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width = device-width", initial-scale="1">
+    <meta name="viewport" content="width = device-width" , initial-scale="1">
     <meta name="description" content="">
     <meta name="author" content="Ivan Martinez">
-    <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="icon" src="https://www.flaticon.es/icono-gratis/avatar_8323568?related_id=8323568&origin=pack">
     <!--Archivo de bootstrap 5 -->
-    <link href="css/bootstrap.min.css" rel="stylesheets">    
     <title> Nuevo Proyecto </title>
 
 </head>
 
 <body>
-    
+
     <main>
 
+        <div class="container mb-5">
+
+            <header class="d-flex flex-wrap py-3 mb-5 border-bottom">
+
+                <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+                    <div class="container">
+
+                        <a class="navbar-brand" href="#"> Mi Proyecto </a>
+                        <button class="" type="" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="#">Nosotros</a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="#">Servicios</a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="#">Contacto</a>
+                                </li>
+
+                            </ul>
+
+                        </div>
+
+                    </div>
+
+
+                </nav>
+
+            </header>
+
+        </div>
+        <!-- Funcion de Carrusel-->
+        <div class="row">
+
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" class="active" aria-current="true" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" class="active" aria-current="true" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <a href="https://picsum.photos/id/0/5616/3744" target="_blank" title="aca agarre la foto 1">
+                            <img src="https://i.picsum.photos/id/0/5616/3744.jpg?hmac=3GAAioiQziMGEtLbfrdbcoenXoWAW-zlyEAMkfEdBzQ" class="d-block w-100" alt="aca agarre la foto 1">
+                        </a>
+                    </div>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <a href="https://pixabay.com/es/illustrations/minecraft-videojuego-bloques-cuadra-1106252/" target="_blank" title="aca agarre la foto 2">
+                            <img src="https://cdn.pixabay.com/photo/2015/12/23/22/36/minecraft-1106252_960_720.jpg" class="d-block w-100" alt="aca agarre la foto 2">
+                        </a>
+                    </div>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <a href="https://pixabay.com/es/illustrations/minecraft-hacer-videojuego-ciudad-529464/" target="_blank" title="aca agarre la foto 3">
+                            <img src="https://cdn.pixabay.com/photo/2014/11/13/15/24/minecraft-529464_960_720.jpg" class="d-block w-100" alt="aca agarre la foto 3">
+                        </a>
+                    </div>
+                </div>
+            </div>   
+
+        </div>
 
     </main>
-    
+
+    <footer class="footer mt-auto py-3 bg-light">
+
+        <div class="container">
+            <span class="text-muted"> Mi Proyecto ©
+                <script>document.write(new Date().getFullYear())</script>
+            </span>
+        </div>
+
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
