Integracion bootstrap forma local

--- a/nosotros.html
+++ b/nosotros.html
@@ -62,6 +62,28 @@
 
             </header>
 
+            <h2 class="subtitle">VARIEDAD</h2>
+
+        <div class="about__main">
+            <article class="about__icons">
+                <img src="./images/shapes.svg" class="about__icon">
+                <h3 class="about__title">Caracteristicas</h3>
+                <p class="about__paragrah">Una homepage, responsive, de calidad para el cumplimiento del PSET 8</p>
+            </article>
+
+            <article class="about__icons">
+                <img src="./images/paint.svg" class="about__icon">
+                <h3 class="about__title">Animaciones</h3>
+                <p class="about__paragrah">Trabajadas con JavaScrip, usando Sliders, acciones para las descripciones, etc</p>
+            </article>
+
+            <article class="about__icons">
+                <img src="./images/code.svg" class="about__icon">
+                <h3 class="about__title">Finalidad</h3>
+                <p class="about__paragrah">Exitosa, espero tener toda la nota con esta pagina XD</p>
+            </article>
+        </div>
+
             </div>
         </div>
 
