cambios para entrega v1

--- a/nosotros.html
+++ b/nosotros.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width = device-width" , initial-scale="1">
     <meta name="description" content="">
     <meta name="author" content="Ivan Martinez">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="css/estilos.css" rel="stylesheet">
     <link rel="icon" src="https://www.flaticon.es/icono-gratis/avatar_8323568?related_id=8323568&origin=pack">
     <!--Archivo de bootstrap 5 -->
     <title> Nuevo Proyecto </title>
@@ -62,27 +61,29 @@
 
             </header>
 
-            <h2 class="subtitle">VARIEDAD</h2>
 
-        <div class="about__main">
-            <article class="about__icons">
-                <img src="./images/shapes.svg" class="about__icon">
-                <h3 class="about__title">Caracteristicas</h3>
-                <p class="about__paragrah">Una homepage, responsive, de calidad para el cumplimiento del PSET 8</p>
-            </article>
+            <div class="container d-flex" >
+                
 
-            <article class="about__icons">
-                <img src="./images/paint.svg" class="about__icon">
-                <h3 class="about__title">Animaciones</h3>
-                <p class="about__paragrah">Trabajadas con JavaScrip, usando Sliders, acciones para las descripciones, etc</p>
-            </article>
+                <div class="card" style="width: 18rem;">
+                    <img src="https://cdn.pixabay.com/photo/2015/03/11/21/53/minecraft-669310_960_720.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
 
-            <article class="about__icons">
-                <img src="./images/code.svg" class="about__icon">
-                <h3 class="about__title">Finalidad</h3>
-                <p class="about__paragrah">Exitosa, espero tener toda la nota con esta pagina XD</p>
-            </article>
-        </div>
+                  <div class="card" style="width: 18rem;">
+                    <img src="https://cdn.pixabay.com/photo/2015/03/11/21/53/minecraft-669310_960_720.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+
+            </div>
 
             </div>
         </div>
