--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width = device-width" , initial-scale="1">
     <meta name="description" content="">
     <meta name="author" content="Ivan Martinez">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="css/estilos.css" rel="stylesheet">
     <link rel="icon" src="https://www.flaticon.es/icono-gratis/avatar_8323568?related_id=8323568&origin=pack">
     <!--Archivo de bootstrap 5 -->
     <title> Nuevo Proyecto </title>
@@ -22,7 +21,7 @@
 
             <header class="d-flex flex-wrap py-3 mb-5 border-bottom">
 
-                <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
                     <div class="container">
 
                         <a class="navbar-brand" href="#"> Mi Proyecto </a>
@@ -63,7 +62,7 @@
             </header>
 
             <!-- Funcion de Carrusel-->
-            <div class="row" class="container">
+            <div class="row" class="container mb-8">
 
                 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
@@ -98,7 +97,8 @@
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Siguiente</span>
                     </button>
-                </div>   
+                </div> 
+                <button type="button" class="btn btn-primary">oe loco</button>  
             </div>
         </div>
 
@@ -116,9 +116,7 @@
 
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+    <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
 
 </body>
 
