--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width = device-width" , initial-scale="1">
     <meta name="description" content="">
     <meta name="author" content="Ivan Martinez">
+    <link rel="icon" href="images/icono.ico">
     <link href="css/estilos.css" rel="stylesheet">
-    <link rel="icon" src="https://www.flaticon.es/icono-gratis/avatar_8323568?related_id=8323568&origin=pack">
+    <!--<link rel="icon" src="https://www.flaticon.es/icono-gratis/avatar_8323568?related_id=8323568&origin=pack">-->
     <!--Archivo de bootstrap 5 -->
     <title> Nuevo Proyecto </title>
 
@@ -98,7 +99,6 @@
                         <span class="visually-hidden">Siguiente</span>
                     </button>
                 </div> 
-                <button type="button" class="btn btn-primary">oe loco</button>  
             </div>
         </div>
 
