--- a/nosotros.html
+++ b/nosotros.html
@@ -21,7 +21,7 @@
 
             <header class="d-flex flex-wrap py-3 mb-5 border-bottom">
 
-                <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
                     <div class="container">
 
                         <a class="navbar-brand" href="#"> Mi Proyecto </a>
