--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">Servicios</a>
+                                    <a class="nav-link active" aria-current="page" href="/Servicios.html">Servicios</a>
                                 </li>
 
                                 <li class="nav-item">
@@ -63,6 +63,7 @@
             </header>
 
             <!-- Funcion de Carrusel-->
+            
             <div class="row" class="container mb-8">
 
                 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
