Implementacion de los 2 html restantes

--- a/Servicios.html
+++ b/Servicios.html
@@ -17,56 +17,59 @@
 <body>
 
     <main>
-
         <div class="container mb-5">
-
             <header class="d-flex flex-wrap py-3 mb-5 border-bottom">
-
                 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
                     <div class="container">
-
-                        <a class="navbar-brand" href="#"> Mi Proyecto </a>
+                        <div>
+                            <img src="https://cdn-icons-png.flaticon.com/512/528/528095.png" alt="" width="25px">
+                            <a class="navbar-brand" href="#"> Mi Proyecto </a>
+                        </div>
                         <button class="" type="" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
                             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
                                 <li class="nav-item">
                                     <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
                                 </li>
-
                                 <li class="nav-item">
                                     <a class="nav-link active" aria-current="page" href="/nosotros.html">Nosotros</a>
                                 </li>
-
                                 <li class="nav-item">
                                     <a class="nav-link active" aria-current="page" href="/Servicios.html">Servicios</a>
                                 </li>
-
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">Contacto</a>
+                                    <a class="nav-link active" aria-current="page" href="/contacto.html">Contacto</a>
                                 </li>
-
                             </ul>
-
                         </div>
-
                     </div>
-
-
                 </nav>
-
             </header>
-
+            <div class="row">
+                <h2 class="text-center"> Modos de Juego </h2>
+                <div class="col-md-4">
+                  <img src="https://images7.alphacoders.com/728/728078.png " class="img-fluid">
+                  <h4 class="text-center">Aventura</h4>
+                  <p> Este modo de juego esta diseñado para mapas creados por jugadores, limitando varias de las mecánicas presentes en Minecraft. En este modo, el jugador es incapaz de destruir bloques, ya sea con herramientas o con la mano, 
+                    y es incapaz de colocarlos, lo que implica que no se puede alterar el entorno ni puede ser asaltado por jugadores. </p>
+                </div>
+                <div class="col-md-4">
+                  <img src="https://images5.alphacoders.com/556/556724.jpg" class="img-fluid">
+                  <h4 class="text-center">Creativo</h4>
+                  <p> El modo creativo es uno de los modos de juego principales de Minecraft. 
+                    El modo creativo deja a un lado los aspectos de supervivencia de Minecraft y permite a los jugadores construir y destruir estructuras y mecanismos fácilmente. </p>
+                </div>
+                <div class="col-md-4">
+                  <img src="https://images8.alphacoders.com/108/1081076.png" class="img-fluid">
+                  <h4 class="text-center">Supervivencia</h4>
+                  <p> El modo supervivencia es un modo de juego de Minecraft en el que los jugadores tienen como objetivo recoger recursos, construir su hogar, acabar con las criaturas y explorar la tierra con la intención de sobrevivir. </p>
+                </div>
+              </div>              
             </div>
         </div>
-
-
-
     </main>
 
     <footer class="footer mt-auto py-3 bg-light">
