--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
 
                 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
                     <div class="container">
+                        <div>
+                            <img src="https://cdn-icons-png.flaticon.com/512/528/528095.png" alt="" width="25px">
+                            <a class="navbar-brand" href="#"> Mi Proyecto </a>
+                        </div>
 
-                        <a class="navbar-brand" href="#"> Mi Proyecto </a>
                         <button class="" type="" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="toggle navigation">
                             <span class="navbar-toggler-icon"></span>
@@ -48,7 +51,7 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">Contacto</a>
+                                    <a class="nav-link active" aria-current="page" href="/contacto.html">Contacto</a>
                                 </li>
 
                             </ul>
