--- a/nosotros.html
+++ b/nosotros.html
@@ -23,8 +23,10 @@
 
                 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
                     <div class="container">
-
-                        <a class="navbar-brand" href="#"> Mi Proyecto </a>
+                        <div>
+                            <img src="https://cdn-icons-png.flaticon.com/512/528/528095.png" alt="" width="25px">
+                            <a class="navbar-brand" href="#"> Mi Proyecto </a>
+                        </div>
                         <button class="" type="" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="toggle navigation">
                             <span class="navbar-toggler-icon"></span>
@@ -47,7 +49,7 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">Contacto</a>
+                                    <a class="nav-link active" aria-current="page" href="/contacto.html">Contacto</a>
                                 </li>
 
                             </ul>
@@ -63,8 +65,8 @@
             
             <div class="container-sm">
 
-                <h2 class="text-center">Caracteristicas</h2>
-                <div class="container d-flex" >
+                <h2 class="text-center"> Caracteristicas </h2>
+                <div class="row" >
                     
                         <div class="card mb-3"  style="width: 18rem;">
                             <img src="https://cdn.pixabay.com/photo/2016/03/30/13/30/minecraft-1290686_960_720.png" class="card-img-top" alt="compra">
