--- a/contacto.html
+++ b/contacto.html
@@ -60,13 +60,13 @@
             <div class="row">
                 <h4 class="mb-4">Datos de Contacto</h4>
                 <div class="mb-3">
-                <img src="https://cdn-icons-png.flaticon.com/512/711/711170.png" alt="Dirección" width="32" height="32"> Av. Lunitas # 386 - Codelandia
+                <img src="https://cdn-icons-png.flaticon.com/512/711/711170.png" alt="Dirección" width="32" height="32"> Söder Mälarstrand 43, 118 25 Stockholm, Suecia
                 </div>
                 <div class="mb-3">
-                <img src="https://cdn-icons-png.flaticon.com/512/2630/2630752.png" alt="Teléfono" width="32" height="32"> 444 4444 | 999 999 999
+                <img src="https://cdn-icons-png.flaticon.com/512/2630/2630752.png" alt="Teléfono" width="32" height="32">  +46-70-378-3135.
                 </div>
                 <div class="mb-3">
-                <img src="https://cdn-icons-png.flaticon.com/512/3178/3178165.png" alt="Email" width="32" height="32"> mail@miproyecto.com
+                <img src="https://cdn-icons-png.flaticon.com/512/3178/3178165.png" alt="Email" width="32" height="32"> support@mojang.com
                 </div>
             </div>
              
@@ -74,37 +74,37 @@
             <div class="row mt-4">
                 <h4>Redes Sociales</h4>
 
-                <li class="col-md-4">
-                    <a href="#">
+                <li class="col-md-1">
+                    <a href="https://twitter.com/Minecraft">
                     <img src="https://cdn-icons-png.flaticon.com/512/3669/3669691.png" title="Twitter" alt="Twitter" width="32" height="32">
                     </a>
                 </li>
-                <li class="col-md-4">
-                    <a href="#">
+                <li class="col-md-1">
+                    <a href="https://www.facebook.com/minecraft/">
                     <img src="https://cdn-icons-png.flaticon.com/512/20/20673.png" title="Facebook" alt="Facebook" width="32" height="32">
                     </a>
                 </li>
-                <li class="col-md-4">
-                    <a href="#">
+                <li class="col-md-1">
+                    <a href="https://www.youtube.com/user/vegetta777">
                     <img src="https://cdn-icons-png.flaticon.com/512/3669/3669688.png" title="YouTube" alt="YouTube" width="32" height="32">
                     </a>
                 </li>
-                <li class="col-md-4">
-                    <a href="#">
+                <li class="col-md-1">
+                    <a href="https://www.instagram.com/minecraft/?hl=es-la">
                     <img src="https://cdn-icons-png.flaticon.com/512/3670/3670274.png" title="Instagram" alt="Instagram" width="32" height="32">
                     </a>
                 </li>
-                <li class="col-md-4">
+                <li class="col-md-1">
                     <a href="#">
                     <img src="https://cdn-icons-png.flaticon.com/512/3116/3116491.png" title="TikTok" alt="TikTok" width="32" height="32">
                     </a>
                 </li>
-                <li class="col-md-4">
-                    <a href="#">
+                <li class="col-md-1">
+                    <a href="https://open.spotify.com/album/3Gt7rOjcZQoHCfnKl5AkK7?si=ca68aa41c4464ae8">
                     <img src="https://cdn-icons-png.flaticon.com/512/3670/3670315.png" title="Spotify" alt="Spotify" width="32" height="32">
                     </a>
                 </li>
-                <li class="col-md-4">
+                <li class="col-md-1">
                     <a href="#">
                     <img src="https://cdn-icons-png.flaticon.com/512/1384/1384007.png" title="WhatsApp" alt="WhatsApp" width="32" height="32">
                     </a>
