--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                     <div class="container">
                         <div>
                             <img src="https://cdn-icons-png.flaticon.com/512/528/528095.png" alt="" width="25px">
-                            <a class="navbar-brand" href="#"> Mi Proyecto </a>
+                            <a class="navbar-brand titulo" href="#"> Mi Proyecto </a>
+
                         </div>
 
                         <button class="" type="" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -78,17 +79,17 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <a href="https://pixabay.com/es/illustrations/minecraft-arte-de-pixel-sand%c3%ada-1746541/" target="_blank" title="aca agarre la foto 1">
-                                <img src="https://cdn.pixabay.com/photo/2016/10/16/23/20/minecraft-1746541_960_720.jpg" class="d-block w-100" alt="aca agarre la foto 1">
+                                <img src="/images/carrusel2.jpg" class="d-block w-100" alt="aca agarre la foto 1">
                             </a>
                         </div>
                         <div class="carousel-item">
                             <a href="https://pixabay.com/es/illustrations/minecraft-videojuego-bloques-cuadra-1106252/" target="_blank" title="aca agarre la foto 2">
-                                <img src="https://cdn.pixabay.com/photo/2015/12/23/22/36/minecraft-1106252_960_720.jpg" class="d-block w-100" alt="aca agarre la foto 2">
+                                <img src="/images/carrusel1.jpg" class="d-block w-100" alt="aca agarre la foto 2">
                             </a>
                         </div>
                         <div class="carousel-item">
                             <a href="https://pixabay.com/es/illustrations/minecraft-hacer-videojuego-ciudad-529464/" target="_blank" title="aca agarre la foto 3">
-                                <img src="https://cdn.pixabay.com/photo/2014/11/13/15/24/minecraft-529464_960_720.jpg" class="d-block w-100" alt="aca agarre la foto 3">
+                                <img src="/images/carrusel3.jpg" class="d-block w-100" alt="aca agarre la foto 3"  >
                             </a>
                         </div>
                     </div>
